--- a/software/translations/en-US.yml
+++ b/software/translations/en-US.yml
@@ -4,6 +4,17 @@
   no: No
   note: Note
   note_restart: A system reboot is required to make settings valid.
+  statistics_avg_current_per_second: Average current per second
+  statistics_avg_current_per_minute: Average current per minute
+  statistics_avg_currnet_total: Total average current
+  statistics_rtc_time: RTC statistical time
+  statistics_instant_peak_currnet: Instantaneous peak current
+  statistics_minimum_no_zero_currnet: Minimum non-zero current
+  statistics_total_capacity: Total Capacity
+  statistics_total_energy: Total Energy
+  pd_power_protection: PD power protection
+  pd_func_enable: PD enable
+  voltage_setting: Voltage Setting
   settings_automatic_protection: Automatic protection settings
   settings_automatic_voltage_cut: Automatic voltage cut
   settings_automatic_current_cut: Automatic current cut
