--- a/software/translations/zh-CN.yml
+++ b/software/translations/zh-CN.yml
@@ -4,10 +4,24 @@
   no: 否
   note: 提示
   note_restart: 为了使配置生效，需要重启设备
+  statistics_avg_current_per_second: 秒平均电流
+  statistics_avg_current_per_minute: 分钟平均电流
+  statistics_avg_currnet_total: 总平均电流
+  statistics_rtc_time: RTC 统计时间
+  statistics_instant_peak_currnet: 瞬时峰值电流
+  statistics_minimum_no_zero_currnet: 最小非零电流
+  statistics_total_capacity: 总容量
+  statistics_total_energy: 总能量
+  pd_power_protection: 保护功率设置
+  pd_func_enable: 开启PD功能
+  voltage_setting: 电压设置
   settings_automatic_protection: 自动保护设置
   settings_automatic_voltage_cut: 自动断开电压
   settings_automatic_current_cut: 自动断开电流
   settings_ui: 界面设置
+  settings_ui_theme: 系统主题
+  settings_ui_theme_light: 浅色
+  settings_ui_theme_dark: 深色
   settings_ui_refr_rate: 刷新频率
   settings_ui_disp_mode: 显示模式
   settings_ui_disp_mode_0: 指针+数字
